# whaleclaw

./: AGENTS.md  README.md  pyproject.toml  whaleclaw.json  修改配置.command  启动 WhaleClaw.command
.cursor/rules/: chinese-response.mdc
docs/specs/: phase1-foundation.md  phase3-webchat.md  phase7-memory-advanced.md  phase8-apps-ops.md
tests/test_agent/: test_commands.py  test_loop.py  test_multi_agent_cfg.py  test_thinking.py  test_usage.py
tests/test_config/: test_loader.py  test_schema.py
tests/test_cron/: test_scheduler.py
tests/test_doctor/: test_checks.py
tests/test_gateway/: test_app.py
tests/test_media/: test_image_resize.py
tests/test_memory/: test_manager.py
tests/test_providers/: test_openai_compat.py  test_router.py
tests/test_sessions/: test_compressor.py  test_context_window.py  test_group_compressor.py  test_manager.py
tests/test_skills/: test_clawhub.py  test_parser.py  test_router.py
tests/test_tools/: test_bash.py  test_browser.py  test_browser_query_rules.py  test_patch_apply.py  test_ppt_edit.py  test_process.py  test_web_fetch.py
whaleclaw/: __main__.py  entry.py  runtime_python.py
whaleclaw/agent/: commands.py  loop.py  multi_agent.py  pool.py  prompt.py  single_agent.py  usage.py
whaleclaw/cli/: main.py
whaleclaw/config/: loader.py  paths.py  schema.py
whaleclaw/cron/: scheduler.py  store.py
whaleclaw/daemon/: launchd.py  manager.py  systemd.py
whaleclaw/doctor/: checks.py
whaleclaw/gateway/: app.py  middleware.py  ws.py
whaleclaw/media/: __init__.py  image_resize.py
whaleclaw/memory/: manager.py
(+56 files in other folders)
